feat: add roles to the users
